--- a/index.html
+++ b/index.html
@@ -2,22 +2,14 @@
 <html>
 
 <head>
+    
+    <link rel="stylesheet"  media="screen" href="style.css" />
 
-    <style type="type/css>
-        body 
-        {
-            background: #000;
-            color: #fff;
-            font-family: Verdana,Arial, sans-serif; 
-            font-size: 1.4rem;
-        }
-
-
-    </style>
 
 </head>
 
 <body>
+
 <h2>Hello... This is ABMedia83</h2>
 <p>More to come soon...</p>
 
