--- a/index.html
+++ b/index.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    
-    <title>Home Page</title>
-    <link rel="stylesheet"  media="screen" href="style.css" />
-
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ABMedia83 Home</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
-
 <body>
-
-<h2>Hello... This is ABMedia83</h2>
-<p>More to come soon...</p>
-
+    
 </body>
-
-
-
 </html>
