--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
+<header>
+<nav id="mynav"></nav>
+</header>
+<br />
+<br />
+<div class="container">
     
+
+        <section class="col">
+        <h2>ABMedia83 Website</h2>
+        <hr /> 
+        <p>More to Come...</p>
+        </section>
+
+</div>
+
+
+<script lang="javascript" src="scripts/page.js" ></script>
 </body>
 </html>
