--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About ABMedia83</title>
     <link rel="stylesheet" media="screen" href="style.css" />
+    <link rel="icon"  href="images/logo.png">
+    
 </head>
 <body>
     <nav id="mynav">
