--- a/resources.html
+++ b/resources.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ABMedia83 Resources</title>
     <link rel="stylesheet" media="screen" href="style.css" />
+    <link rel="icon"  href="images/logo.png">
 </head>
 <body>
     <nav id="mynav">
