--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ABMedia83 Home</title>
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <link rel="icon"  href="images/logo.png">
 </head>
 <body>
 <header>
