--- a/index.html
+++ b/index.html
@@ -40,12 +40,14 @@
         </div>
    
         <div class="col-2">
-            <h3>I'm do</h3>
+            <h3>I do</h3>
             <ul>
-                <li>YouTube</li>
-                <li>Graphic Deisgner</li>
                 <li>Web Designer</li>
                 <li>Porgrammer</li>
+                <li>Graphic Deisgner</li>
+                <li>3D Design</li>
+                <li>YouTube</li>
+          
             </ul>
             <h3>Always remember...</h3>
             <ul>
